with Password Safe version 3.12.01. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.12.01
=====================
[1914433] It is now possible to view the password policy set for an
individual entry, by shift-clicking on the checked Override Policy
checkbox. A tooltip explaining this is shown when relevant.
[1904391] Many functions, e.g. cancelling a rename of an entry, inter-instance
Drag & Drop, nolonger collapse the entire tree.
[1904254] Advanced Search now does not show non-text fields e.g. times,
as they were never searched.
[1900655] Compare advanced subset now applies to current and comparison
databases.
[1478022] Correct description of this fix in the Release Notes to avoid
user confusion thinking it does something different.
[] Ensure first entry is selected when opening an existing database.
[] XML export of password history fixed for when number to be saved > 99.

Changes to Existing Features in 3.12.01
=======================================
[] Improved compare database reporting.
[] If a field was empty e.g. user or notes, when the user requested it to be
copied to the clipboard, no action was performed.  Now a field will always be
copied whether it contains data or not.

New Features for 3.12.01
========================
[1914644] Password expiry can now be set as an interval (1 to 3650 days)
that will be applied from creation time and thereafter whenever the password
is changed. This is indicated in the List view by an asterisk after the 
expiry date.
[1904254] Search now selects all text fields by default.
[1901380] Find result highlighted and selected.
[1901380] If the Esc key is not being used to minimize PasswordSafe, then
it will close the Find Toolbar if active.